--- a/environment/environment.yml
+++ b/environment/environment.yml
@@ -4,14 +4,12 @@ channels:
   - defaults
 dependencies:
   - python=3.11
-  - transformers>=4.51.3
   - pandas>=2.2.3
   - scikit-learn>=1.6.1
   - tqdm>=4.67.1
   - nltk>=3.9.1
   - seaborn>=0.13.2
   - openpyxl>=3.1.5
-  - sentence-transformers>=4.1.0
   - jupyter>=1.1.1
   - ipykernel>=6.29.5
   - fastapi>=0.115.12
@@ -28,14 +26,20 @@ dependencies:
   - python-dotenv>=1.0.0
   - mlflow>=2.22.0  
   - azure-identity>=1.23.0
+  - psutil>=5.8.0,<6.0.0
   - pip
   - pip:
       - ffmpeg-python==0.2.0
-      - torch
-      - torchvision
-      - torchaudio
+      - torch==2.1.2
+      - torchvision==0.16.2
+      - torchaudio==2.1.2
+      - transformers==4.41.2
+      - sentence-transformers==3.0.1
       - azure-ai-ml>=1.27.1
       - azureml-core
+      - azureml-inference-server-http
+      - azureml-defaults
+      - inference-schema[numpy-support]
       - assemblyai>=0.40.2
       - pytubefix>=8.13.1
       - git+https://github.com/openai/whisper.git
