--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,22 +19,21 @@ repos:
     hooks:
     -   id: flake8
         args: ['--max-line-length=88', '--extend-ignore=E203,W503']
+        files: ^src/.*\.py$
+        exclude: ^tests/
 
 -   repo: https://github.com/psf/black
     rev: 24.10.0  # Use the latest version
     hooks:
     -   id: black
         language_version: python3.11
+        files: ^src/.*\.py$
+        exclude: ^tests/
 
 -   repo: https://github.com/PyCQA/isort
     rev: 5.13.2  # Use the latest version
     hooks:
     -   id: isort
         args: ["--profile", "black"]
-
--   repo: https://github.com/pycqa/bandit
-    rev: 1.7.10  # Security linter
-    hooks:
-    -   id: bandit
-        args: ["-r", "src/", "-f", "json", "-o", "bandit-report.json"]
+        files: ^src/.*\.py$
         exclude: ^tests/
