--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -1,128 +1,43 @@
+# Development Docker Compose Configuration with Azure Monitor
+# Use this file for development and testing with local builds
+
 services:
   backend:
     build:
       context: .
       dockerfile: Dockerfile
-    image: soheilmp/emotion-clf-backend:latest
     ports:
       - "3120:3120"
     volumes:
+      - ./src:/app/src
       - ./models:/models
-      - ./monitoring/metrics:/app/metrics
+      - /tmp:/tmp
     env_file:
       - .env
     environment:
       - PYTHONPATH=/app
-      - PROMETHEUS_METRICS_ENABLED=true
-    container_name: emotion_backend
+      - MONITORING_ENABLED=true
+      - ENVIRONMENT=development
+      - LOG_LEVEL=DEBUG
+    container_name: emotion_backend_dev
     networks:
       - emotion_network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3120/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-      target: production
-    image: soheilmp/emotion-clf-frontend:latest
     ports:
       - "3121:80"
-    container_name: emotion_frontend
+    container_name: emotion_frontend_dev
     depends_on:
       - backend
     networks:
       - emotion_network
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: emotion_prometheus
-    ports:
-      - "3122:9090"
-    volumes:
-      - ./monitoring/prometheus:/etc/prometheus
-      - prometheus_data:/prometheus
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--web.console.libraries=/etc/prometheus/console_libraries'
-      - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
-      - '--web.enable-lifecycle'
-      - '--web.route-prefix=/'
-    networks:
-      - emotion_network
-    restart: unless-stopped
-
-  grafana:
-    image: grafana/grafana:latest
-    container_name: emotion_grafana
-    ports:
-      - "3123:3000"
-    volumes:
-      - grafana_data:/var/lib/grafana
-      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
-      - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards
-    environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin123
-      - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SECURITY_DISABLE_GRAVATAR=true
-      - GF_ANALYTICS_REPORTING_ENABLED=false
-      - GF_ANALYTICS_CHECK_FOR_UPDATES=false
-      - GF_INSTALL_PLUGINS=grafana-piechart-panel,grafana-worldmap-panel
-    networks:
-      - emotion_network
-    depends_on:
-      - prometheus
-    restart: unless-stopped
-
-  cadvisor:
-    image: gcr.io/cadvisor/cadvisor:latest
-    container_name: emotion_cadvisor
-    # Note: Internal access only - accessible via cadvisor:8080 within Docker network
-    volumes:
-      - /:/rootfs:ro
-      - /var/run:/var/run:rw
-      - /sys:/sys:ro
-      - /var/lib/docker/:/var/lib/docker:ro
-      - /dev/disk/:/dev/disk:ro
-    command:
-      - '--housekeeping_interval=10s'
-      - '--max_housekeeping_interval=15s'
-      - '--event_storage_event_limit=default=0'
-      - '--event_storage_age_limit=default=0'
-      - '--disable_metrics=percpu,sched,tcp,udp,disk,diskIO,hugetlb,referenced_memory,cpu_topology,resctrl'
-      - '--docker_only=true'
-      - '--store_container_labels=false'
-    privileged: true
-    devices:
-      - /dev/kmsg
-    networks:
-      - emotion_network
-    restart: unless-stopped
-
-volumes:
-  prometheus_data:
-    driver: local
-  grafana_data:
-    driver: local
 
 networks:
   emotion_network:
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
-          gateway: 172.20.0.1
+    name: emotion_dev_network
