--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,12 @@
         "date-fns": "^4.1.0",
         "framer-motion": "^10.18.0",
         "react": "^18.2.0",
-        "react-chartjs-2": "^5.3.0",        "react-dom": "^18.2.0",
+        "react-chartjs-2": "^5.3.0",
+        "react-dom": "^18.2.0",
         "react-player": "^2.16.0",
+        "react-router-dom": "^7.6.2",
         "react-scripts": "5.0.1",
+        "recharts": "^3.0.0",
         "web-vitals": "^2.1.4",
         "xlsx": "^0.18.5"
     },
